Улучшения команды "сгруппировать", наброски ifelse